[project]
name = "evidential-docs"
version = "0.0.1"
description = "Documentation for Evidential, an experiments platform for the social sector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-redirects>=1.2.2",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-open-in-new-tab>=1.0.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0,<4.6",
    "ruff>=0.14.2,<0.15.0",
]
